--- a/index.html
+++ b/index.html
@@ -75,5 +75,8 @@ document.addEventListener("keyup", function(e) {
 		break;
 	}
 });
+document.addEventListener("mousedown", function(e) {
+	
+});
 </script>
 </html>
